--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
        uses: docker/build-push-action@v2
        with:
          push: false
-         tags: ${{ github.event.repository.name }}:latest, ${{ github.repository }}:latest
+         tags: ${{"learinci" }}:latest, ${{ testname }}:latest
 
      - name: Run functional tests
        run:  go test -v ./...
